# sudoku-solver-py

./: LICENSE.md  pyproject.toml
sudoku_solver_py/: algorithms.py  models.py
tests/: conftest.py  test_algorithms.py  test_models.py
