[tool.poetry]
name = "sudoku-solver-py"
version = "0.1.0"
description = ""
authors = ["Christian Nau <nau.forum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
